// api/caregiver/proto/caregiver.proto
syntax = "proto3";

package caregiver.v1;

option go_package = "api/caregiver/proto/caregiverv1";

service CaregiverService {
  rpc GetCaregiver(GetCaregiverRequest) returns (GetCaregiverResponse);
  rpc ListAvailable(ListAvailableRequest) returns (ListAvailableResponse);
  rpc VerifyCaregiver(VerifyCaregiverRequest) returns (VerifyCaregiverResponse);
}

message GetCaregiverRequest {
  string caregiver_id = 1;
}

message GetCaregiverResponse {
  Caregiver caregiver = 1;
}

message Caregiver {
  string id = 1;
  string name = 2;
  string email = 3;
  bool verified = 4;
  repeated string service_types = 5;
  double rating = 6;
}

message ListAvailableRequest {
  string service_type = 1;
  string date = 2;           // ISO 8601
  string location_lat = 3;
  string location_lng = 4;
  int32 radius_km = 5;
  int32 page = 6;
  int32 per_page = 7;
}

message ListAvailableResponse {
  repeated Caregiver caregivers = 1;
  int32 total = 2;
}
